--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,31 +1,104 @@
 * {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
 
+/*Desktop View*/
 .navbar {
-  background: #000000;
-  height: auto;
+  display: flex;
+  background-color: #0d0d0d;
+  justify-content: space-between;
+  align-items: center;
+  height: 80px;
 }
 
-.nav-item {
-  color: #ffffff;
+.logo {
+  width: 65px;
+  height: 65px;
 }
 
-/* .nav-item:hover {} */
-.navbar-container {
-  /* display: flex; */
-  /* align-items: flex-end; */
-  justify-content: right;
+.nav-options {
+  list-style-type: none;
 }
 
-.nav-menu {
-  list-style: none;
-  padding: 2em;
-  /* margin: 2em; */
-  color: #ffffff;
-}
-
-/* .nav-bullet {
+.nav-options > li {
   float: left;
-} */
+}
+
+.nav-options > li > a {
+  color: #ffffff;
+  padding: 8px;
+  margin: 12px;
+  text-decoration: none;
+  font-size: 20px;
+  padding: 100px;
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+.nav-options > li > a :hover {
+  color: dodgerblue;
+}
+
+.mobile-option {
+  display: none;
+}
+
+.mobile-menu {
+  display: none;
+}
+
+@media (max-width: 648px) {
+  /*Mobile View */
+  .navbar {
+    padding: 0px 10px;
+  }
+
+  .logo {
+    width: 45px;
+    height: 45px;
+  }
+
+  .nav-options {
+    display: flex;
+    width: 100%;
+    height: auto;
+    position: absolute;
+    top: 80px;
+    left: -100%;
+    opacity: 0;
+    transition: all 0.5s ease;
+    flex-direction: column;
+    list-style-type: none;
+    grid-gap: 0px;
+  }
+
+  .nav-options.active {
+    background: #0d0d0d;
+    left: 0;
+    opacity: 1;
+    transition: all 0.5s ease;
+    z-index: 1;
+    align-content: center;
+    padding-left: 0px;
+  }
+
+  .menu-icon {
+    width: 45px;
+    height: 45px;
+    color: #ffffff;
+  }
+
+  .option {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 10vw;
+    padding: 30px 0px;
+  }
+}
+
+.mobile-menu {
+  display: block;
+}
