Update Chatbot responsive design

--- a/src/components/chatbot/chatbot.css
+++ b/src/components/chatbot/chatbot.css
@@ -4,18 +4,25 @@
   margin-top: 5rem;
 }
 
+.react-chatbot-kit-chat-input {
+  border: 2px solid #d8d8d8;
+  border-radius: 5px 0 5px 5px;
+}
+
+.react-chatbot-kit-chat-input-container {
+  padding: 3px;
+}
+
 @media (max-width: 648px) {
-  .react-chatbot-kit-chat-message-container {
-    height: auto;
-  }
   .react-chatbot-kit-chat-container {
     margin-top: 0;
-    width: auto;
+    width: auto !important;
   }
   .react-chatbot-kit-chat-inner-container {
     margin-bottom: 0;
   }
-  .react-chatbot-kit-chat-input-container {
-    position: inherit;
+  .react-chatbot-kit-chat-bot-message {
+    /* height: auto; */
+    width: auto;
   }
 }
