Final design change

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -7,7 +7,6 @@
 /*Desktop View*/
 .navbar {
   display: flex;
-  background-color: #0d0d0d;
   justify-content: space-between;
   align-items: center;
   height: 80px;
@@ -28,6 +27,7 @@
 
 .nav-options > li > a {
   color: #ffffff;
+  font-weight: bold;
   margin: 12px;
   text-decoration: none;
   font-size: 20px;
@@ -37,7 +37,7 @@
 }
 
 .nav-options > li > a:hover {
-  color: dodgerblue;
+  color: aqua;
 }
 
 .mobile-option {
@@ -48,7 +48,7 @@
   display: none;
 }
 
-@media (max-width: 648px) {
+@media (max-width: 1000px) {
   /*Mobile View */
   .navbar {
     padding: 0px 10px;
@@ -74,15 +74,20 @@
   }
 
   .nav-options.active {
-    background: #0d0d0d;
+    background: #ffffff;
     left: 0;
     opacity: 1;
     transition: all 0.5s ease;
     z-index: 1;
     align-content: center;
     padding-left: 0px;
+    width: 200px;
+    height: 300px;
   }
-
+  .nav-options > li > a {
+    color: #000000;
+    font-weight: 500;
+  }
   .menu-icon {
     width: 45px;
     height: 45px;
@@ -93,8 +98,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 10vw;
-    padding: 30px 0px;
+    padding: 20px 0px;
   }
 }
 
