--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -1,19 +1,33 @@
-.container{
-    margin: 50px 0;
+.container {
+  padding: 50px 0;
+  padding-top: 0;
+  border-radius: 25px;
 }
 
-.card{
-    margin: 0 2% !important;
+.card {
+  margin: 0 2% !important;
 }
 
-.infected{
-    border-bottom: 10px solid rgba(0,0,255,0.5);
+.infected {
+  border-bottom: 10px solid rgba(0, 0, 255, 0.5);
 }
 
-.recovered{
-    border-bottom: 10px solid rgba(0,255,0,0.5);
+.recovered {
+  border-bottom: 10px solid rgba(0, 255, 0, 0.5);
 }
 
-.deaths{
-    border-bottom: 10px solid rgba(255,0,0,0.5);
+.deaths {
+  border-bottom: 10px solid rgba(255, 0, 0, 0.5);
+}
+
+.MuiGrid-spacing-xs-3 > .MuiGrid-item {
+  padding: 12px;
+  margin: 20px;
+  border-radius: 25px;
+}
+
+.MuiFormControl-root {
+  background: #ffffff;
+  margin-bottom: 10px !important;
+  border-radius: 8px;
 }
