--- a/src/components/Chart/Chart.css
+++ b/src/components/Chart/Chart.css
@@ -1,5 +1,10 @@
-.container{
-    display: flex;
-    justify-content: center;
-    width: 85%;
+.chartjs-render-monitor {
+  animation: chartjs-render-animation 0.001s;
+  background: #ffffff;
+  border-radius: 25px;
+}
+
+@media (max-width: 648px) {
+  .chartjs-render-monitor {
+  }
 }
